# pointcloud_stitching

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HOSTS  Makefile  README.md  cmake_install.cmake  compile_commands.json  host.py  install_manifest.txt  readme.md
calibration/: README.md  capture_images.py  generate_calibration_command.py  rename.py
calibration/dataset/: custom.yaml
edge_scripts/: build_edge.sh  calibration_dependencies.sh  capture_images.sh  mount.sh  transfer_images.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake  pcs-camera-grab-frames  pcs-camera-optimized  pcs-camera-optimized.cpp  pcs-camera-test-samples  pcs-multicamera-client  pcs-multicamera-client.cpp  pcs-multicamera-optimized  pcs-multicamera-optimized.cpp
